# enter-giveaway-inator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.cloud.toml  config.example.toml  fly.toml  pyproject.toml
src/giveawayinator/: __init__.py  browser.py  cli.py  config.py  models.py  parser.py  pipeline.py  schedule.py  store.py
src/giveawayinator/notifiers/: __init__.py  base.py  browser.py  console.py  desktop.py  discord.py  ntfy.py
src/giveawayinator/sources/: __init__.py  apify.py  base.py  sample.py  tiktok.py  whatnot.py
tests/: test_apify.py  test_browser.py  test_ntfy.py  test_parser.py  test_pipeline.py  test_schedule.py  test_whatnot.py
