[project]
name = "enter-giveawayinator"
version = "0.1.0"
description = "Discovers Pokemon card giveaways on TikTok and notifies you with the entry requirements so you can enter them yourself."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex McGarity" }]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "playwright>=1.44",
]

[project.optional-dependencies]
desktop = ["plyer>=2.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
giveawayinator = "giveawayinator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giveawayinator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
